--- a/diff.html
+++ b/diff.html
@@ -144,8 +144,8 @@
           <path d="M6 9H3V7h3V4l5 4-5 4V9z m8-7v12c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h12c0.55 0 1 0.45 1 1z m-1 0H1v12h12V2z"></path>
       </svg>      <a href="#d2h-135765" class="d2h-file-name">/home/runner/work/progress/progress/clones/{ha-core/homeassistant/components → beta/custom_components}/plugwise/manifest.json</a>
       <span class="d2h-file-stats">
-          <span class="d2h-lines-added">+9</span>
-          <span class="d2h-lines-deleted">-8</span>
+          <span class="d2h-lines-added">+8</span>
+          <span class="d2h-lines-deleted">-7</span>
       </span>
     </span>
 </li>
@@ -16051,7 +16051,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>documentation</del>&quot;: &quot;<del>https:&#x2F;&#x2F;www</del>.<del>home-assistant</del>.<del>io&#x2F;integrations&#x2F;plugwise</del>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>codeowners</del>&quot;: <del>[</del>&quot;<del>@CoMPaTech</del>&quot;,<del> &quot;@bouwew&quot;, &quot;@brefra&quot;, &quot;@frenck&quot;],</del></span>
         </div>
     </td>
 </tr><tr>
@@ -16062,7 +16062,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: <del>[</del>&quot;plugwise<del>==0.27.5</del>&quot;<del>]</del>,</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>config_flow</del>&quot;: <del>true</del>,</span>
         </div>
     </td>
 </tr><tr>
@@ -16073,40 +16073,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>codeowners</del>&quot;: [&quot;<del>@CoMPaTech</del>&quot;, &quot;<del>@bouwew</del>&quot;<del>, &quot;@brefra&quot;, &quot;@frenck&quot;</del>],</span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">7</div>
-<div class="line-num2"></div>
-    </td>
-    <td class="d2h-del d2h-change">
-        <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>zeroconf</del>&quot;: [&quot;<del>_plugwise</del>.<del>_tcp</del>.<del>local.</del>&quot;],</span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">8</div>
-<div class="line-num2"></div>
-    </td>
-    <td class="d2h-del d2h-change">
-        <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>config_flow</del>&quot;: <del>true</del>,</span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-del">
-      <div class="line-num1">9</div>
-<div class="line-num2"></div>
-    </td>
-    <td class="d2h-del">
-        <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;iot_class&quot;: &quot;local_polling&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>documentation</del>&quot;: &quot;<del>https:&#x2F;&#x2F;www.home-assistant.io&#x2F;integrations&#x2F;plugwise</del>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -16128,7 +16095,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>version</ins>&quot;: &quot;<ins>0</ins>.<ins>34</ins>.<ins>5</ins>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>version</ins>&quot;: &quot;<ins>0.34.5</ins>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -16139,7 +16106,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>documentation</ins>&quot;: &quot;<ins>https:&#x2F;&#x2F;github.com&#x2F;</ins>plugwise<ins>&#x2F;plugwise-beta</ins>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>documentation</ins>&quot;: <ins>&quot;https:&#x2F;&#x2F;github.com&#x2F;plugwise&#x2F;plugwise-beta&quot;</ins>,</span>
         </div>
     </td>
 </tr><tr>
@@ -16150,34 +16117,34 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>after_dependencies</ins>&quot;: [&quot;<ins>usb</ins>&quot;, &quot;<ins>zeroconf</ins>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>after_dependencies</ins>&quot;: <ins>[</ins>&quot;<ins>usb</ins>&quot;,<ins> &quot;zeroconf&quot;],</ins></span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-ins d2h-change">
+    <td class="d2h-code-linenumber d2h-ins">
       <div class="line-num1"></div>
 <div class="line-num2">7</div>
     </td>
-    <td class="d2h-ins d2h-change">
+    <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>requirements</ins>&quot;: [&quot;<ins>plugwise==0</ins>.<ins>27</ins>.<ins>6</ins>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.27.6&quot;],</span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-ins d2h-change">
+    <td class="d2h-code-linenumber d2h-ins">
       <div class="line-num1"></div>
 <div class="line-num2">8</div>
     </td>
-    <td class="d2h-ins d2h-change">
+    <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>codeowners</ins>&quot;: <ins>[&quot;@CoMPaTech&quot;</ins>,<ins>&quot;@bouwew&quot;,&quot;@brefra&quot;],</ins></span>
+            <span class="d2h-code-line-ctn">  &quot;codeowners&quot;: [&quot;@CoMPaTech&quot;,&quot;@bouwew&quot;,&quot;@brefra&quot;],</span>
         </div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">10</div>
+      <div class="line-num1">7</div>
 <div class="line-num2">9</div>
     </td>
     <td class="d2h-cntx">
@@ -16187,47 +16154,69 @@
         </div>
     </td>
 </tr><tr>
+    <td class="d2h-code-linenumber d2h-cntx">
+      <div class="line-num1">8</div>
+<div class="line-num2">10</div>
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">  &quot;iot_class&quot;: &quot;local_polling&quot;,</span>
+        </div>
+    </td>
+</tr><tr>
     <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">11</div>
+      <div class="line-num1">9</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>loggers</del>&quot;: <del>[</del>&quot;<del>crcmod</del>&quot;,<del> &quot;plugwise&quot;]</del></span>
+            <span class="d2h-code-line-ctn">  &quot;<del>loggers</del>&quot;: <del>[&quot;crcmod&quot;</del>,<del> &quot;plugwise&quot;],</del></span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-del d2h-change">
+      <div class="line-num1">10</div>
+<div class="line-num2"></div>
+    </td>
+    <td class="d2h-del d2h-change">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;plugwise<del>==0.27.5</del>&quot;]<del>,</del></span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-del">
+      <div class="line-num1">11</div>
+<div class="line-num2"></div>
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">  &quot;zeroconf&quot;: [&quot;_plugwise._tcp.local.&quot;]</span>
         </div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins d2h-change">
       <div class="line-num1"></div>
-<div class="line-num2">10</div>
+<div class="line-num2">11</div>
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>iot_class</ins>&quot;: &quot;<ins>local_polling</ins>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>config_flow</ins>&quot;: <ins>true</ins>,</span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-ins">
-      <div class="line-num1"></div>
-<div class="line-num2">11</div>
-    </td>
-    <td class="d2h-ins">
-        <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;config_flow&quot;: true,</span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-ins">
+    <td class="d2h-code-linenumber d2h-ins d2h-change">
       <div class="line-num1"></div>
 <div class="line-num2">12</div>
     </td>
-    <td class="d2h-ins">
+    <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;loggers&quot;: [&quot;plugwise&quot;]</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>loggers</ins>&quot;: [&quot;plugwise&quot;]</span>
         </div>
     </td>
 </tr><tr>
