--- a/diff_add_switch_support.html
+++ b/diff_add_switch_support.html
@@ -19131,7 +19131,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>26</del>.<del>0</del>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0.26.0</del>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -19142,7 +19142,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>documentation</del>&quot;: &quot;<del>https:&#x2F;&#x2F;github</del>.<del>com&#x2F;plugwise&#x2F;plugwise-beta</del>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>documentation</del>&quot;: <del>&quot;https:&#x2F;&#x2F;github.com&#x2F;plugwise&#x2F;plugwise-beta&quot;</del>,</span>
         </div>
     </td>
 </tr><tr>
@@ -19153,7 +19153,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>after_dependencies</del>&quot;: [&quot;<del>usb</del>&quot;, &quot;<del>zeroconf</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>after_dependencies</del>&quot;: <del>[</del>&quot;<del>usb</del>&quot;,<del> &quot;zeroconf&quot;],</del></span>
         </div>
     </td>
 </tr><tr>
@@ -19164,18 +19164,18 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>plugwise==0</del>.<del>21</del>.<del>0</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: <del>[</del>&quot;<del>plugwise==0.21.0</del>&quot;<del>]</del>,</span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-del d2h-change">
+    <td class="d2h-code-linenumber d2h-del">
       <div class="line-num1">8</div>
 <div class="line-num2"></div>
     </td>
-    <td class="d2h-del d2h-change">
+    <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>codeowners</del>&quot;: <del>[&quot;@CoMPaTech&quot;</del>,<del>&quot;@bouwew&quot;,&quot;@brefra&quot;],</del></span>
+            <span class="d2h-code-line-ctn">  &quot;codeowners&quot;: [&quot;@CoMPaTech&quot;,&quot;@bouwew&quot;,&quot;@brefra&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -19197,7 +19197,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>documentation</ins>&quot;: &quot;<ins>https:&#x2F;&#x2F;www</ins>.<ins>home-assistant</ins>.<ins>io&#x2F;integrations&#x2F;plugwise</ins>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>codeowners</ins>&quot;: <ins>[</ins>&quot;<ins>@CoMPaTech</ins>&quot;,<ins> &quot;@bouwew&quot;, &quot;@brefra&quot;, &quot;@frenck&quot;],</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -19208,7 +19208,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>requirements</ins>&quot;: <ins>[</ins>&quot;<ins>plugwise==0</ins>.<ins>27.5</ins>&quot;<ins>]</ins>,</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>config_flow</ins>&quot;: <ins>true</ins>,</span>
         </div>
     </td>
 </tr><tr>
@@ -19219,7 +19219,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>codeowners</ins>&quot;: [&quot;<ins>@CoMPaTech</ins>&quot;, &quot;<ins>@bouwew</ins>&quot;<ins>, &quot;@brefra&quot;, &quot;@frenck&quot;</ins>],</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>documentation</ins>&quot;: &quot;<ins>https:&#x2F;&#x2F;www.home-assistant.io&#x2F;integrations&#x2F;plugwise</ins>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -19230,24 +19230,13 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>zeroconf</ins>&quot;: [&quot;<ins>_plugwise</ins>.<ins>_tcp</ins>.<ins>local.</ins>&quot;],</span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-ins d2h-change">
-      <div class="line-num1"></div>
-<div class="line-num2">8</div>
-    </td>
-    <td class="d2h-ins d2h-change">
-        <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>config_flow</ins>&quot;: <ins>true</ins>,</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>integration_type</ins>&quot;: &quot;<ins>hub</ins>&quot;,</span>
         </div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">9</div>
-<div class="line-num2">9</div>
+<div class="line-num2">8</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -19269,12 +19258,23 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins d2h-change">
       <div class="line-num1"></div>
-<div class="line-num2">10</div>
+<div class="line-num2">9</div>
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>integration_type</ins>&quot;: <ins>&quot;hub&quot;,</ins></span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>loggers</ins>&quot;: <ins>[&quot;crcmod&quot;, &quot;plugwise&quot;],</ins></span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-ins">
+      <div class="line-num1"></div>
+<div class="line-num2">10</div>
+    </td>
+    <td class="d2h-ins">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.27.5&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -19285,7 +19285,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;loggers&quot;: [&quot;crcmod&quot;, &quot;plugwise&quot;]</span>
+            <span class="d2h-code-line-ctn">  &quot;zeroconf&quot;: [&quot;_plugwise._tcp.local.&quot;]</span>
         </div>
     </td>
 </tr><tr>
