--- a/diff_add_typing.html
+++ b/diff_add_typing.html
@@ -759,7 +759,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">from homeassistant.<del>const</del> import <del>ATTR_ID, ATTR_NAME, Platform</del></span>
+            <span class="d2h-code-line-ctn">from homeassistant.const import <del>ATTR_ID, ATTR_NAME, Platform</del></span>
         </div>
     </td>
 </tr><tr>
@@ -770,7 +770,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">from homeassistant.<del>core</del> import <del>HomeAssistant, callback</del></span>
+            <span class="d2h-code-line-ctn">from homeassistant.core import HomeAssistant<del>, callback</del></span>
         </div>
     </td>
 </tr><tr>
@@ -792,7 +792,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">from homeassistant.<ins>core</ins> import <ins>HomeAssistant</ins></span>
+            <span class="d2h-code-line-ctn">from homeassistant.const import <ins>EntityCategory</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -803,7 +803,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">from homeassistant.<ins>helpers.entity</ins> import <ins>EntityCategory</ins></span>
+            <span class="d2h-code-line-ctn">from homeassistant.core import HomeAssistant</span>
         </div>
     </td>
 </tr><tr>
@@ -21614,7 +21614,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    UnitOfElectricPotential,</span>
+            <span class="d2h-code-line-ctn">    EntityCategory,</span>
         </div>
     </td>
 </tr><tr>
@@ -21625,7 +21625,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    UnitOfEnergy,</span>
+            <span class="d2h-code-line-ctn">    UnitOfElectricPotential,</span>
         </div>
     </td>
 </tr><tr>
@@ -21636,7 +21636,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    UnitOfPower,</span>
+            <span class="d2h-code-line-ctn">    UnitOfEnergy,</span>
         </div>
     </td>
 </tr><tr>
@@ -21647,7 +21647,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    UnitOfPressure,</span>
+            <span class="d2h-code-line-ctn">    UnitOfPower,</span>
         </div>
     </td>
 </tr><tr>
@@ -21658,7 +21658,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    UnitOfTemperature,</span>
+            <span class="d2h-code-line-ctn">    UnitOfPressure,</span>
         </div>
     </td>
 </tr><tr>
@@ -21669,7 +21669,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    UnitOfVolume,</span>
+            <span class="d2h-code-line-ctn">    UnitOfTemperature,</span>
         </div>
     </td>
 </tr><tr>
@@ -21680,7 +21680,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">)</span>
+            <span class="d2h-code-line-ctn">    UnitOfVolume,</span>
         </div>
     </td>
 </tr><tr>
@@ -21691,7 +21691,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">from homeassistant.core import HomeAssistant</span>
+            <span class="d2h-code-line-ctn">)</span>
         </div>
     </td>
 </tr><tr>
@@ -21702,7 +21702,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">from homeassistant.helpers.entity import EntityCategory</span>
+            <span class="d2h-code-line-ctn">from homeassistant.core import HomeAssistant</span>
         </div>
     </td>
 </tr><tr>
@@ -29462,7 +29462,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">from homeassistant.core import HomeAssistant</span>
+            <span class="d2h-code-line-ctn">from homeassistant.const import EntityCategory</span>
         </div>
     </td>
 </tr><tr>
@@ -29473,7 +29473,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">from homeassistant.helpers.entity import EntityCategory</span>
+            <span class="d2h-code-line-ctn">from homeassistant.core import HomeAssistant</span>
         </div>
     </td>
 </tr><tr>
