--- a/diff_usb_tests.html
+++ b/diff_usb_tests.html
@@ -144,8 +144,8 @@
           <path d="M6 9H3V7h3V4l5 4-5 4V9z m8-7v12c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h12c0.55 0 1 0.45 1 1z m-1 0H1v12h12V2z"></path>
       </svg>      <a href="#d2h-497723" class="d2h-file-name">/home/runner/work/progress/progress/clones/{beta/custom_components → ha-core/homeassistant/components}/plugwise/sensor.py</a>
       <span class="d2h-file-stats">
-          <span class="d2h-lines-added">+427</span>
-          <span class="d2h-lines-deleted">-157</span>
+          <span class="d2h-lines-added">+426</span>
+          <span class="d2h-lines-deleted">-156</span>
       </span>
     </span>
 </li>
@@ -1122,7 +1122,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">from <ins>homeassistant</ins>.<ins>core</ins> import <ins>HomeAssistant</ins></span>
+            <span class="d2h-code-line-ctn">from <ins>homeassistant</ins>.<ins>const</ins> import <ins>EntityCategory</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -1133,7 +1133,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><ins>from homeassistant.helpers.entity import EntityCategory</ins></span>
+            <span class="d2h-code-line-ctn"><ins>from homeassistant.core import HomeAssistant</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -21920,7 +21920,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    <ins>UnitOfElectricPotential</ins>,</span>
+            <span class="d2h-code-line-ctn">    <ins>EntityCategory</ins>,</span>
         </div>
     </td>
 </tr><tr>
@@ -21931,7 +21931,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    <ins>UnitOfEnergy</ins>,</span>
+            <span class="d2h-code-line-ctn">    <ins>UnitOfElectricPotential</ins>,</span>
         </div>
     </td>
 </tr><tr>
@@ -21942,7 +21942,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    <ins>UnitOfPower</ins>,</span>
+            <span class="d2h-code-line-ctn">    <ins>UnitOfEnergy</ins>,</span>
         </div>
     </td>
 </tr><tr>
@@ -21953,7 +21953,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    <ins>UnitOfPressure</ins>,</span>
+            <span class="d2h-code-line-ctn">    <ins>UnitOfPower</ins>,</span>
         </div>
     </td>
 </tr><tr>
@@ -21964,7 +21964,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    UnitOfTemperature,</span>
+            <span class="d2h-code-line-ctn">    UnitOfPressure,</span>
         </div>
     </td>
 </tr><tr>
@@ -21975,13 +21975,24 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">    UnitOfTemperature,</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-ins">
+      <div class="line-num1"></div>
+<div class="line-num2">20</div>
+    </td>
+    <td class="d2h-ins">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">+</span>
             <span class="d2h-code-line-ctn">    UnitOfVolume,</span>
         </div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">15</div>
-<div class="line-num2">20</div>
+<div class="line-num2">21</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -22001,13 +22012,35 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">17</div>
-<div class="line-num2"></div>
+    <td class="d2h-code-linenumber d2h-ins d2h-change">
+      <div class="line-num1"></div>
+<div class="line-num2">22</div>
     </td>
-    <td class="d2h-del d2h-change">
+    <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">from homeassistant.core import <ins>HomeAssistant</ins></span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-ins">
+      <div class="line-num1"></div>
+<div class="line-num2">23</div>
+    </td>
+    <td class="d2h-ins">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">from homeassistant.helpers.entity_platform import AddEntitiesCallback</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-cntx">
+      <div class="line-num1">17</div>
+<div class="line-num2">24</div>
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
             <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
@@ -22041,7 +22074,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">from .const import <del>(</del></span>
+            <span class="d2h-code-line-ctn">from .<del>const</del> import <del>(</del></span>
         </div>
     </td>
 </tr><tr>
@@ -22063,7 +22096,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"><del>    CB_NEW_NODE,</del></span>
+            <span class="d2h-code-line-ctn"><del>    CB_NEW_NODE</del>,</span>
         </div>
     </td>
 </tr><tr>
@@ -22074,7 +22107,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"><del>    COORDINATOR,</del></span>
+            <span class="d2h-code-line-ctn">    <del>COORDINATOR,</del></span>
         </div>
     </td>
 </tr><tr>
@@ -22096,7 +22129,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    <del>FW,</del></span>
+            <span class="d2h-code-line-ctn"><del>    FW</del>,</span>
         </div>
     </td>
 </tr><tr>
@@ -22151,51 +22184,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"><del>    VENDOR</del>,</span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-ins d2h-change">
-      <div class="line-num1"></div>
-<div class="line-num2">21</div>
-    </td>
-    <td class="d2h-ins d2h-change">
-        <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">from homeassistant.core import <ins>HomeAssistant</ins></span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-ins d2h-change">
-      <div class="line-num1"></div>
-<div class="line-num2">22</div>
-    </td>
-    <td class="d2h-ins d2h-change">
-        <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><ins>from homeassistant.helpers.entity import EntityCategory</ins></span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-ins d2h-change">
-      <div class="line-num1"></div>
-<div class="line-num2">23</div>
-    </td>
-    <td class="d2h-ins d2h-change">
-        <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">from <ins>homeassistant</ins>.<ins>helpers.entity_platform</ins> import <ins>AddEntitiesCallback</ins></span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-ins d2h-change">
-      <div class="line-num1"></div>
-<div class="line-num2">24</div>
-    </td>
-    <td class="d2h-ins d2h-change">
-        <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><br></span>
+            <span class="d2h-code-line-ctn">    <del>VENDOR</del>,</span>
         </div>
     </td>
 </tr><tr>
@@ -22206,7 +22195,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">from .const import <ins>DOMAIN</ins></span>
+            <span class="d2h-code-line-ctn">from .<ins>const</ins> import <ins>DOMAIN</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -22228,7 +22217,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><ins>from .entity import PlugwiseEntity</ins></span>
+            <span class="d2h-code-line-ctn">from .<ins>entity</ins> import <ins>PlugwiseEntity</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -22320,25 +22309,25 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-ins">
+    <td class="d2h-code-linenumber d2h-ins d2h-change">
       <div class="line-num1"></div>
 <div class="line-num2">36</div>
     </td>
-    <td class="d2h-ins">
+    <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        entity_category=EntityCategory.DIAGNOSTIC,</span>
+            <span class="d2h-code-line-ctn"><ins>        entity_category=EntityCategory.DIAGNOSTIC</ins>,</span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-ins">
+    <td class="d2h-code-linenumber d2h-ins d2h-change">
       <div class="line-num1"></div>
 <div class="line-num2">37</div>
     </td>
-    <td class="d2h-ins">
+    <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    ),</span>
+            <span class="d2h-code-line-ctn">    <ins>)</ins>,</span>
         </div>
     </td>
 </tr><tr>
@@ -26511,8 +26500,19 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-cntx">
+    <td class="d2h-code-linenumber d2h-del">
       <div class="line-num1">47</div>
+<div class="line-num2"></div>
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn"><br></span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-cntx">
+      <div class="line-num1">48</div>
 <div class="line-num2">402</div>
     </td>
     <td class="d2h-cntx">
@@ -26522,57 +26522,46 @@
         </div>
     </td>
 </tr><tr>
+    <td class="d2h-code-linenumber d2h-del">
+      <div class="line-num1">49</div>
+<div class="line-num2"></div>
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">async def async_setup_entry_usb(hass, config_entry, async_add_entities):</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-del">
+      <div class="line-num1">50</div>
+<div class="line-num2"></div>
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">    &quot;&quot;&quot;Set up Plugwise sensor based on config_entry.&quot;&quot;&quot;</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-del">
+      <div class="line-num1">51</div>
+<div class="line-num2"></div>
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">    api_stick = hass.data[DOMAIN][config_entry.entry_id][STICK]</span>
+        </div>
+    </td>
+</tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">48</div>
+      <div class="line-num1">52</div>
 <div class="line-num2">403</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn"><br></span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">49</div>
-<div class="line-num2"></div>
-    </td>
-    <td class="d2h-del d2h-change">
-        <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">async def <del>async_setup_entry_usb</del>(<del>hass, config_entry, async_add_entities):</del></span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">50</div>
-<div class="line-num2"></div>
-    </td>
-    <td class="d2h-del d2h-change">
-        <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    <del>&quot;&quot;&quot;Set</del> <del>up Plugwise sensor based on config_entry.&quot;&quot;&quot;</del></span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">51</div>
-<div class="line-num2"></div>
-    </td>
-    <td class="d2h-del d2h-change">
-        <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    <del>api_stick</del> <del>= hass.data[DOMAIN][config_entry.entry_id][STICK]</del></span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">52</div>
-<div class="line-num2"></div>
-    </td>
-    <td class="d2h-del d2h-change">
-        <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">-</span>
             <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
@@ -26584,51 +26573,51 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"><del>    async</del> <del>def</del> <del>async_add_sensors(mac</del>:<del> str):</del></span>
+            <span class="d2h-code-line-ctn"><del>    </del>async def <del>async_add_sensors</del>(<del>mac: str):</del></span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-del">
+    <td class="d2h-code-linenumber d2h-del d2h-change">
       <div class="line-num1">54</div>
 <div class="line-num2"></div>
     </td>
-    <td class="d2h-del">
+    <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        &quot;&quot;&quot;Add plugwise sensors for device.&quot;&quot;&quot;</span>
+            <span class="d2h-code-line-ctn"><del>        &quot;&quot;&quot;Add</del> <del>plugwise sensors for device.&quot;&quot;&quot;</del></span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-del">
+    <td class="d2h-code-linenumber d2h-del d2h-change">
       <div class="line-num1">55</div>
 <div class="line-num2"></div>
     </td>
-    <td class="d2h-del">
+    <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        entities = []</span>
+            <span class="d2h-code-line-ctn"><del>        entities</del> <del>= []</del></span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-del">
+    <td class="d2h-code-linenumber d2h-del d2h-change">
       <div class="line-num1">56</div>
 <div class="line-num2"></div>
     </td>
-    <td class="d2h-del">
+    <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        entities.extend(</span>
+            <span class="d2h-code-line-ctn"><del>        entities.extend(</del></span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-del">
+    <td class="d2h-code-linenumber d2h-del d2h-change">
       <div class="line-num1">57</div>
 <div class="line-num2"></div>
     </td>
-    <td class="d2h-del">
+    <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">            [</span>
+            <span class="d2h-code-line-ctn"><del>            [</del></span>
         </div>
     </td>
 </tr><tr>
@@ -26881,7 +26870,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    <ins>hass:</ins> <ins>HomeAssistant,</ins></span>
+            <span class="d2h-code-line-ctn"><ins>    hass:</ins> <ins>HomeAssistant,</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -26892,7 +26881,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    <ins>config_entry:</ins> <ins>ConfigEntry,</ins></span>
+            <span class="d2h-code-line-ctn"><ins>    config_entry:</ins> <ins>ConfigEntry,</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -26914,7 +26903,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><ins>)</ins> <ins>-&gt;</ins> <ins>None</ins>:</span>
+            <span class="d2h-code-line-ctn"><ins>) -&gt; None:</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -30026,7 +30015,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><ins>from homeassistant.core import HomeAssistant</ins></span>
+            <span class="d2h-code-line-ctn"><ins>from homeassistant.const import EntityCategory</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -30037,7 +30026,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">from <ins>homeassistant</ins>.<ins>helpers.entity</ins> import <ins>EntityCategory</ins></span>
+            <span class="d2h-code-line-ctn">from <ins>homeassistant</ins>.<ins>core</ins> import <ins>HomeAssistant</ins></span>
         </div>
     </td>
 </tr><tr>
