Update: main - Diff report completed

--- a/diff_mem-fix.html
+++ b/diff_mem-fix.html
@@ -16051,7 +16051,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0.34.6b0</del>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0.34.6b2</del>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -16084,7 +16084,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;af&#x2F;8f&#x2F;6b266240c192caf3f05c50cb24da5edc6dd21ee190fbd4f4058ca3ffc844&#x2F;plugwise-0.27.7b0.tar.gz#plugwise==0.27.7b0&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;10&#x2F;ba&#x2F;204cd63a9552e23857eaf21a88172a6e9ea742357e3bce8e11883ed8bf88&#x2F;plugwise-0.27.7b2.tar.gz#plugwise==0.27.7b2&quot;],</span>
         </div>
     </td>
 </tr><tr>
